# miniDB

./: .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  OPTIMIZATIONS.md  README.md  SPEC.md  TASK.md
benches/: throughput.rs
benches/encoding/: codecs.rs
benches/query/: pipeline.rs
benches/storage/: scan.rs  write.rs
src/: analyser.rs  column.rs  column_chunk.rs  column_reader.rs  column_writer.rs  config.rs  data_type.rs  evaluator.rs  executor.rs  lib.rs  main.rs  mark.rs  part.rs  schema.rs  storage.rs  string_column.rs  string_column_reader.rs  string_column_writer.rs  table.rs  table_reader.rs  table_writer.rs  types.rs
src/aggregator/: avg.rs  count.rs  factory.rs  max.rs  min.rs  mod.rs  sum.rs  top_k.rs
src/cli/: mod.rs
src/encoding/: delta.rs  mod.rs  plain.rs  rle.rs
src/parser/: ast.rs  lower.rs  mod.rs
src/processors/: aggregate.rs  batch.rs  filter.rs  full_scan.rs  group_by_aggregate.rs  mod.rs  processor.rs  projection.rs  scalar_value.rs
src/storage/: column_chunk.rs  column_reader.rs  column_writer.rs  mod.rs  schema.rs  string_column_reader.rs  string_column_writer.rs  table_reader.rs  table_writer.rs
tasks/: Deferred.md  TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-011.md  TASK-012.md  TASK-013.md  TASK-014.md  TASK-015.md
